@@ -14,6 +14,11 @@ TODO inlining : substitute class+function type parameters in order to have fully
 	added __charCodeAt for very fast string operations on Flash9
 	bugfix with inlined local variables
 	upgraded flash9 api to flex3/player 9.0.115
+	override is now mandatory, no more --override
+	dynamic is now a keyword
+	f9dynamic is now dynamic and is mandatory on all platforms
+	public/private/dynamic are inherited by default when overriding a method
+	added Bytes api
 
 2008-04-05: 1.19
 	fixed flash9 Array.toString
